tests/NormalTests/paczka1/small_fuzzy/65596893.err
Error in line 8: mwmaTukW1z S297 -5,1
Error in line 5: mwmaTukW1z S297 98,2
Error in line 15: W8im1 S806 99,5
